2005-03-14  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c: Include dw2gencfi.h.
	(mips_cfi_frame_initial_instructions): New.
	* config/tc-mips.h (TARGET_USE_CFIPOP): Define.
	(tc_cfi_frame_initial_instructions): Ditto.
	(DWARF2_DEFAULT_RETURN_COLUMN): Ditto.
	(DWARF2_CIE_DATA_ALIGNMENT): Ditto.
	* Makefile.am: Update dependencies.
	* Makefile.in: Regenerate.

2005-03-15  Alan Modra  <amodra@bigpond.net.au>

	* po/es.po: Commit new Spanish translation.

2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* po/tr.po: Commit new Turkish translation.

2005-03-12  Zack Weinberg  <zack@codesourcery.com>

	* config/tc-arm.c (tinsns): Add ARMv6K instructions sev, wfe,
	wfi, yield.

2005-03-11  Daniel Jacobowitz  <dan@codesourcery.com>

	* config-gas.com: Mark vax-vms as obsolete.
	* configure.in: Remove fmt=vms support.
	* config.in: Regenerate.
	* configure: Regenerate.
	* config/obj-vms.h, config/obj-vms.c, config/vms-conf.h: Remove.

2005-03-10  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (finish_vinsn): Include the last instruction slot
	when checking if xg_resolve_literals needs to be called.
	* config/tc-xtensa.h: Fix spelling typo in a comment.

2005-03-10  Jan Beulich  <jbeulich@novell.com>

	* config/tc-tic54x.h (tic54x_macro_info): Change parameter type.
	* config/tc-tic54x.c (tic54x_macro_info): Likewise. Replace hand-
	crafted structure declarations with the types from macro.h.

2005-03-09  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (s_cpsetup): Use '__gnu_local_gp' instead of '_gp'
	for -mno-shared optimization.

2005-03-09  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (MAX_VR4130_NOPS, MAX_DELAY_NOPS): New macros.
	(MAX_NOPS): Bump to 4.
	(mips_fix_vr4130): New variable.
	(nops_for_vr4130): New function.
	(nops_for_insn): Use MAX_DELAY_NOPS rather than MAX_NOPS.  Use
	nops_for_vr4130 if working around VR4130 errata.
	(OPTION_FIX_VR4130, OPTION_NO_FIX_VR4130): New macros.